--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-browserify": "^2.1.4",
-    "browserify": "*"
+    "browserify": "*",
+    "simd": "2.0.0"
   }
 }
