--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "math", "aabb", "quaternion"
   ],
   "main": "src/vector_math.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Tezirg/vector_math.js.git"
+  },
   "devDependencies": {
     "jshint": "latest",
     "uglify-js": "latest",
@@ -18,6 +22,7 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-browserify": "^2.1.4",
     "browserify": "*",
     "simd": "2.0.0"
