--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
   - image: circleci/node:8.9.4
   steps:
   - checkout
-  - run: echo "coucou hibou"
+  - run: npm build
 
 workflows:
   version: 2
