--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "type": "git",
     "url": "https://github.com/Tezirg/vector_math.js.git"
   },
+  "scripts": {
+    "test": "grunt test",
+	"build": "grunt build"
+  },
   "devDependencies": {
     "jshint": "latest",
     "uglify-js": "latest",
     "nodeunit": "^0.9.0",
-    "grunt": "~0.4.5",
+    "grunt": "1.0.2",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-concat": "~0.1.3",
