--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "devDependencies": {
     "jshint": "latest",
     "uglify-js": "latest",
-    "nodeunit": "^0.9.0",
-    "grunt": "1.0.2",
+    "nodeunit": "latest",
+    "grunt": "latest",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-yuidoc": "^0.5.2",
-    "grunt-browserify": "^2.1.4",
-    "browserify": "*",
-    "simd": "2.0.0"
+    "grunt-contrib-nodeunit": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-yuidoc": "latest",
+    "grunt-browserify": "latest",
+    "browserify": "latest",
+    "simd": "latest"
   }
 }
