--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A Vector math library for 3D and 2D applications",
   "author": "jean Grizet <jean.grizet@gmail.com>",
+  "license": "MIT",
   "keywords": [
     "vector_math", "vector_math.js",
     "vector", "matrix", "3d",
@@ -22,7 +23,7 @@
     "uglify-js": "latest",
     "nodeunit": "latest",
     "grunt": "latest",
-    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-jshint": "latest",
     "grunt-contrib-nodeunit": "latest",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-uglify": "latest",
